EST-1533: Changed IncomingDocumentRepository::matchAllIncomingDocuments and IncomingDocumentRepository::findAllIncomingDocuments to typesafe queries, changed all other finders from Guava iterable to Java8 streams API. Replaced corresponding tests